<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="email" type="String"/>
        <variable name="password" type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="13"
                android:hint="@string/login_email"
                android:text="@={email}"
                android:textColorHint="@color/charcoal_grey"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="9dp"
                tools:ignore="Autofill"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_layout"
            app:layout_constraintBottom_toTopOf="@id/login_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="13"
                android:hint="@string/login_password"
                android:text="@={password}"
                android:textColorHint="@color/charcoal_grey"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="9dp"
                tools:ignore="Autofill"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textStyle="normal"
            android:background="@color/greeny_blue"
            android:layout_width="277dp"
            android:layout_height="51dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
