<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.detail.DetailFragment">

    <data>
        <import type="java.util.List"/>
        <variable name="simulation" type="br.com.opttasks.data.Simulation"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:layout_margin="15dp">

                    <TextView
                            android:id="@+id/sim_name_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{simulation.name}"
                            android:textSize="20sp"
                            android:textColor="@color/text_view"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@{`max Z = ` + simulation.Z + `\nstatus = ` + simulation.status}"
                            android:textSize="15sp"
                            android:textColor="@color/text_view"
                            android:fontFamily="sans-serif"
                            app:layout_constraintTop_toBottomOf="@id/sim_name_view"
                            app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/sim_alloc_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="4dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/card_allocs_title"
                            android:textSize="20sp"
                            android:textColor="@color/text_view"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:entries="@{simulation.allocations}"
                            app:layout="@{@layout/detail_alloc_item}"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="4dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/card_tasks_title"
                            android:textSize="20sp"
                            android:textColor="@color/text_view"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:entries="@{simulation.tasks}"
                            app:layout="@{@layout/detail_task_item}"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="4dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/card_students_title"
                            android:textSize="20sp"
                            android:textColor="@color/text_view"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:entries="@{simulation.students}"
                            app:layout="@{@layout/detail_student_item}"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>